--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'org.jetbrains.dokka'
+    id 'com.google.gms.google-services'
 }
 apply plugin: 'kotlin-kapt'
 
@@ -36,7 +37,7 @@ android {
     }
     buildFeatures {
         dataBinding true
-        viewBinding = true
+        viewBinding true
     }
 
     dokkaHtml.configure {
@@ -59,6 +60,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'com.google.android.material:material:1.3.0'
     implementation "androidx.recyclerview:recyclerview:1.2.0"
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
     testImplementation 'junit:junit:4.+'
     implementation "androidx.room:room-ktx:2.2.5"
     kapt "androidx.room:room-compiler:2.2.5"
