--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         >
 
 
+        <activity android:name=".Hra.TitulkaActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -24,6 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
