--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,13 @@ apply plugin: 'kotlin-kapt'
 
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "sk.uniza.fri.slivovsky.semestralnapraca"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -37,7 +37,7 @@ android {
     }
     buildFeatures {
         dataBinding true
-        viewBinding true
+        viewBinding = true
     }
 
     dokkaHtml.configure {
