--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
 
 
         <activity android:name=".Hra.TitulkaActivity" android:exported="true"></activity>
+        <activity android:name=".Hra.MenuActivity" android:exported="true"></activity>
+        <activity android:name=".Hra.HraActivity" android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
