--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -62,6 +62,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.0"
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.1'
     testImplementation 'junit:junit:4.+'
     implementation "androidx.room:room-ktx:2.2.5"
     kapt "androidx.room:room-compiler:2.2.5"
