--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         <activity android:name=".Hra.TitulkaActivity" android:exported="true"></activity>
         <activity android:name=".Hra.MenuActivity" android:exported="true"></activity>
         <activity android:name=".Hra.HraActivity" android:exported="true"></activity>
+        <activity android:name=".Hra.TutorialActivity" android:exported="true"></activity>
+        <activity android:name=".Skore.ScoreActivity" android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
