--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
 
     defaultConfig {
         applicationId "sk.uniza.fri.slivovsky.semestralnapraca"
-        minSdkVersion 23
+        minSdkVersion 21
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
@@ -62,8 +62,10 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.0"
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
+
     implementation 'com.google.firebase:firebase-firestore-ktx:24.0.1'
     implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
     testImplementation 'junit:junit:4.+'
     implementation "androidx.room:room-ktx:2.2.5"
     kapt "androidx.room:room-compiler:2.2.5"
