--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sk.uniza.fri.slivovsky.semestralnapraca">
+    package="sk.uniza.fri.slivovsky.semestralnapraca"
+
+    >
 
     <application
         android:allowBackup="true"
@@ -9,6 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SemestralnaPraca.NoActionBar"
+        android:requestLegacyExternalStorage="true"
+
         >
         <activity android:name=".Hra.TitulkaActivity" android:exported="true" android:configChanges="orientation|screenSize|keyboardHidden" ></activity>
         <activity android:name=".Hra.KoniecActivity" android:exported="true" android:configChanges="orientation|screenSize|keyboardHidden"></activity>
