--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:exported="true"
             android:configChanges="orientation|screenSize|keyboardHidden" />
         <activity
-            android:name=".game.TutorialActivity"
+            android:name=".tutorial.TutorialActivity"
             android:exported="true"
             android:configChanges="orientation|screenSize|keyboardHidden" />
         <activity
